[gd_scene load_steps=4 format=3 uid="uid://b75qarrkkx5vt"]

[ext_resource type="Script" path="res://scenes/Menus/main_menu.gd" id="1_38ax0"]
[ext_resource type="Theme" uid="uid://dqdpb1lan45tv" path="res://ui/ui.tres" id="1_pivyb"]
[ext_resource type="Texture2D" uid="uid://bqql5ya3jqlb" path="res://New Assets/scene_backgrounds/main_menu.png" id="3_x0b1j"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pivyb")
script = ExtResource("1_38ax0")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 2
offset_right = 288.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture = ExtResource("3_x0b1j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.4
anchor_right = 0.375
anchor_bottom = 0.4
offset_left = -135.0
offset_top = -20.0
offset_right = 74.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
